@@ -171,7 +171,7 @@ module java.base {
         jdk.attach,
         jdk.charsets,
         jdk.compiler,
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.jdeps,
         jdk.jlink,
         jdk.jshell,
@@ -204,12 +204,11 @@ module java.base {
         jdk.internal.jvmstat;
     exports jdk.internal.vm.annotation to
         jdk.unsupported,
-        jdk.internal.vm.ci,
-        jdk.incubator.httpclient;
+        jdk.internal.vm.ci;
     exports jdk.internal.util.jar to
         jdk.jartool;
     exports sun.net to
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.naming.dns;
     exports sun.net.ext to
         jdk.net;
@@ -219,10 +218,10 @@ module java.base {
     exports sun.net.util to
         java.desktop,
         jdk.jconsole,
-        jdk.incubator.httpclient;
+        java.net.http;
     exports sun.net.www to
         java.desktop,
-        jdk.incubator.httpclient,
+        java.net.http,
         jdk.jartool;
     exports sun.net.www.protocol.http to
         java.security.jgss;
@@ -290,6 +289,10 @@ module java.base {
         jdk.jartool,
         jdk.security.auth,
         jdk.security.jgss;
+    exports sun.security.util.math to
+        jdk.crypto.ec
+    exports sun.security.util.math.intpoly to
+        jdk.crypto.ec
     exports sun.security.x509 to
         jdk.crypto.ec,
         jdk.crypto.cryptoki,
